--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9",
+    "multer": "^1.3.0",
+    "nodemailer": "^4.6.5",
     "validator": "^5.6.0"
   },
   "devDependencies": {
